@@ -7,6 +7,8 @@ Revision history for Perl extension PPI
 	Details:
 	- support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
 	  (RT #67831, GitHub #70) (BDFOY, MOREGAN)
+	- Prevent package names like 'x' from being parsed as operators
+	  (GitHub #75) (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
